fix: increase width of committee cards to prevent overlap

--- a/css/committee/committee.css
+++ b/css/committee/committee.css
@@ -28,6 +28,6 @@
 }
 
 .committee__member {
-  min-width: 12rem;
+  min-width: 14rem;
   padding-bottom: 2rem;
 }
